deployments/flux/flux-recv-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flux-recv
spec:
  rules:
  - host: hooks.35.246.105.236.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: flux-recv
          servicePort: 8080
